--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             text-align: center;
             color: white;
             transition: width 0.3s ease-in-out;
-            width: 0%; /* Inicializa em 0% */
+            min-width: 2%; /* Garante visibilidade para valores pequenos */
         }
         .number-grid {
             display: grid;
@@ -233,7 +233,7 @@
             <a href="/rifa-miguel/index.html" class="nav-button">Início</a>
             <a href="/rifa-miguel/como-funciona.html" class="nav-button">Como Funciona</a>
             <a href="/rifa-miguel/sobre-estrabismo.html" class="nav-button">Estrabismo</a>
-            <a href="/rifa-miguel/orcamento.html" class="nav-button">Orçamento</a>
+            <a href="/rifa-miguel/or Ascending...orcamento.html" class="nav-button">Orçamento</a>
             <a href="/rifa-miguel/numero-premiado.html" class="nav-button">Número Premiado</a>
         </nav>
     </header>
@@ -422,8 +422,9 @@
                     const { progress } = await progressRes.json();
                     console.log(`[${new Date().toISOString()}] Progresso recebido: ${progress}%`);
                     const progressBar = document.getElementById('progress-bar');
-                    progressBar.style.width = `${progress}%`;
-                    progressBar.textContent = `${Math.round(progress)}% Arrecadado`;
+                    progressBar.style.width = `${Math.max(progress, 2)}%`; // Largura mínima de 2%
+                    progressBar.textContent = `${progress.toFixed(2)}% Arrecadado`;
+                    progressBar.offsetHeight; // Forçar reflow para garantir renderização
 
                     // Carregar números disponíveis
                     const availableRes = await fetch('https://rifa-miguel.onrender.com/available_numbers', {
